feat: ml prediction and recomendation

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
+        "google-gemini-php/client": "^2.6",
+        "google-gemini-php/laravel": "^2.0",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "^3.1"
