--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "heroku-postbuild": "npm run build",
+        "start": "serve -s dist"
+    },
+    "dependencies": {
+        "serve":"14.2.5"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
