--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
     "scripts": {
         "build": "vite build",
         "dev": "vite",
-        "heroku-postbuild": "npm run build",
-        "start": "serve -s dist"
-    },
-    "dependencies": {
-        "serve":"14.2.5"
+        "heroku-postbuild": "npm run build"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
