--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "google-gemini-php/laravel": "^2.0",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "openai-php/laravel": "^0.18.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
